se arreglan links de imagenes y paginas

--- a/Views/cambios_y_devoluciones.html
+++ b/Views/cambios_y_devoluciones.html
@@ -23,14 +23,14 @@
     </div>
     <div class="top">
         <div class="logIn icon">
-            <img src="../assets/imagenes/login.png" alt="">
+            <img src="../Assets/imagenes/login.png" alt="">
         </div>
         <div class="logo">
-            <a class="logo_central" href="../index.html" ><img src="../assets/imagenes/minipipo_icon.png" alt=""</></a>            
+            <a class="logo_central" href="../index.html" ><img src="../Assets/imagenes/minipipo_icon.png" alt=""></a>            
         </div>
         <div class="shop icon">
-            <img src="../assets/imagenes/favoritos.png" alt="">
-            <img src="../assets/imagenes/carrito.png" alt=""> 
+            <img src="../Assets/imagenes/favoritos.png" alt="">
+            <img src="../Assets/imagenes/carrito.png" alt=""> 
         </div>
     </div>
     <div class="menu_principal">
@@ -83,13 +83,13 @@
     </div>
     <div class="grids_foo">
             <div class="icon envios">
-                <a href="envios.html"><img src="../assets/imagenes/envios_icon.png" alt=""></a>
+                <a href="envios.html"><img src="../Assets/imagenes/envios_icon.png" alt=""></a>
             </div>
             <div class="icon devoluciones">
-                <a href="cambios_y_devoluciones.html"><img src="../assets/imagenes/devolucion.png" alt=""></a>
+                <a href="cambios_y_devoluciones.html"><img src="../Assets/imagenes/devolucion.png" alt=""></a>
             </div>
             <div class="icon rrss ">
-                <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="../assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
+                <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="../Assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
                 <a target="_blank" href="https://www.facebook.com/minipipo.kids/"><img src="../Assets/imagenes/rs_fb.png" alt="facebook/minipipo" /></a>
             </div>
             <div class="envios_text">
