se corrige todas las imagenes del proyecto

--- a/Views/contacto.html
+++ b/Views/contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../assets/imagenes/minipipo_logo.jpeg">
+    <link rel="icon" href="../Assets/imagenes/minipipo_logo.jpeg">
     <meta name="Keywords" content="ropa, bebe, beba, ropita">
     <meta name="author" content="Marcos Escobar">
     <meta name="description" content="Página de venta de ropa para niños en la ciudad de Campana">
@@ -23,14 +23,14 @@
         </div>
         <div class="top">
             <div class="logIn icon">
-                <img src="../assets/imagenes/login.png" alt="">
+                <img src="../Assets/imagenes/login.png" alt="logo">
             </div>
             <div class="logo">
-                <a class="logo_central" href="../index.html" ><img src="../assets/imagenes/minipipo_icon.png" alt=""</></a>            
+                <a class="logo_central" href="../index.html" ><img src="../Assets/imagenes/minipipo_icon.png" alt=""></a>            
             </div>
             <div class="shop icon">
-                <img src="../assets/imagenes/favoritos.png" alt="">
-                <img src="../assets/imagenes/carrito.png" alt=""> 
+                <img src="../Assets/imagenes/favoritos.png" alt="favoritos">
+                <img src="../Assets/imagenes/carrito.png" alt="carrito"> 
             </div>
         </div>
         <div class="menu_principal">
@@ -93,13 +93,13 @@
     </div>
     <div class="grids_foo">
             <div class="icon envios">
-                <a href="envios.html"><img src="../assets/imagenes/envios_icon.png" alt=""></a>
+                <a href="envios.html"><img src="../Assets/imagenes/envios_icon.png" alt="envios"></a>
             </div>
             <div class="icon devoluciones">
-                <a href="cambios_y_devoluciones.html"><img src="../assets/imagenes/devolucion.png" alt=""></a>
+                <a href="cambios_y_devoluciones.html"><img src="../Assets/imagenes/devolucion.png" alt="cambios_y_devoluciones"></a>
             </div>
             <div class="icon rrss ">
-                <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="../assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
+                <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="../Assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
                 <a target="_blank" href="https://www.facebook.com/minipipo.kids/"><img src="../Assets/imagenes/rs_fb.png" alt="facebook/minipipo" /></a>
             </div>
             <div class="envios_text">
