--- a/Views/productos.html
+++ b/Views/productos.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="../assets/imagenes/minipipo_logo.jpeg">
+        <link rel="icon" href="../Assets/imagenes/minipipo_logo.jpeg">
         <meta name="Keywords" content="ropa, bebe, beba, ropita">
         <meta name="author" content="Marcos Escobar">
         <meta name="description" content="Página de venta de ropa para niños en la ciudad de Campana">
@@ -56,12 +56,12 @@
                 </ul>
             </div>
             <div class="productos">
-                <img src="../assets/imagenes/beba_1.jpeg" alt="" width="500px" height="500px">
-                <img src="../assets/imagenes/bebe_1.jpeg" alt="" width="500px" height="500px ">
-                <img src="../assets/imagenes/beba_2.jpeg" alt="" width="500px" height="500px">
-                <img src="../assets/imagenes/bebe_2.jpeg" alt="" width="500px" height="500px">
-                <img src="../assets/imagenes/beba_3.jpeg" alt="" width="500px" height="500px">
-                <img src="../assets/imagenes/bebe_3.jpeg" alt="" width="500px" height="500px">
+                <img src="../Assets/imagenes/beba_1.jpeg" alt="" width="500px" height="500px">
+                <img src="../Assets/imagenes/bebe_1.jpeg" alt="" width="500px" height="500px ">
+                <img src="../Assets/imagenes/beba_2.jpeg" alt="" width="500px" height="500px">
+                <img src="../Assets/imagenes/bebe_2.jpeg" alt="" width="500px" height="500px">
+                <img src="../Assets/imagenes/beba_3.jpeg" alt="" width="500px" height="500px">
+                <img src="../Assets/imagenes/bebe_3.jpeg" alt="" width="500px" height="500px">
             </div>
         </div>
     </main>
