--- a/Views/productos_beba.html
+++ b/Views/productos_beba.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../assets/imagenes/minipipo_logo.jpeg">
+    <link rel="icon" href="../Assets/imagenes/minipipo_logo.jpeg">
     <meta name="Keywords" content="ropa, bebe, beba, ropita">
     <meta name="author" content="Marcos Escobar">
     <meta name="description" content="Página de venta de ropa para niños en la ciudad de Campana">
@@ -56,9 +56,9 @@
                 </ul>
             </div>
             <div class="productos">
-                <img src="../assets/imagenes/beba_1.jpeg" alt="" width="500px" height="500px">
-                <img src="../assets/imagenes/beba_2.jpeg" alt="" width="500px" height="500px">
-                <img src="../assets/imagenes/beba_3.jpeg" alt="" width="500px" height="500px">
+                <img src="../Assets/imagenes/beba_1.jpeg" alt="" width="500px" height="500px">
+                <img src="../Assets/imagenes/beba_2.jpeg" alt="" width="500px" height="500px">
+                <img src="../Assets/imagenes/beba_3.jpeg" alt="" width="500px" height="500px">
             </div>
         </div>
     </main>
@@ -78,13 +78,13 @@
     </div>
     <div class="grids_foo">
             <div class="icon envios">
-                <a href="envios.html"><img src="../assets/imagenes/envios_icon.png" alt=""></a>
+                <a href="envios.html"><img src="../Assets/imagenes/envios_icon.png" alt="envios"></a>
             </div>
             <div class="icon devoluciones">
-                <a href="cambios_y_devoluciones.html"><img src="../assets/imagenes/devolucion.png" alt=""></a>
+                <a href="cambios_y_devoluciones.html"><img src="../Assets/imagenes/devolucion.png" alt="cambios_y_devoluciones"></a>
             </div>
             <div class="icon rrss ">
-                <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="../assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
+                <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="../Assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
                 <a target="_blank" href="https://www.facebook.com/minipipo.kids/"><img src="../Assets/imagenes/rs_fb.png" alt="facebook/minipipo" /></a>
             </div>
             <div class="envios_text">
