se corrigen las imagenes

--- a/Views/productos_beba.html
+++ b/Views/productos_beba.html
@@ -23,14 +23,14 @@
     </div>
     <div class="top">
         <div class="logIn icon">
-            <img src="../assets/imagenes/login.png" alt="">
+            <img src="../Assets/imagenes/login.png" alt="">
         </div>
         <div class="logo">
-            <a class="logo_central" href="../index.html" ><img src="../assets/imagenes/minipipo_icon.png" alt=""</></a>            
+            <a class="logo_central" href="../index.html" ><img src="../Assets/imagenes/minipipo_icon.png" alt=""></a>            
         </div>
         <div class="shop icon">
-            <img src="../assets/imagenes/favoritos.png" alt="">
-            <img src="../assets/imagenes/carrito.png" alt=""> 
+            <img src="../Assets/imagenes/favoritos.png" alt="favoritos">
+            <img src="../Assets/imagenes/carrito.png" alt="carrito"> 
         </div>
     </div>
     <div class="menu_principal">
