--- a/Views/productos.html
+++ b/Views/productos.html
@@ -81,13 +81,13 @@
         </div>
         <div class="grids_foo">
                 <div class="icon envios">
-                    <a href="envios.html"><img src="../assets/imagenes/envios_icon.png" alt=""></a>
+                    <a href="envios.html"><img src="../Assets/imagenes/envios_icon.png" alt="envios"></a>
                 </div>
                 <div class="icon devoluciones">
-                    <a href="cambios_y_devoluciones.html"><img src="../assets/imagenes/devolucion.png" alt=""></a>
+                    <a href="cambios_y_devoluciones.html"><img src="../Assets/imagenes/devolucion.png" alt="cambios_y_devoluciones"></a>
                 </div>
                 <div class="icon rrss ">
-                    <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="../assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
+                    <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="../Assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
                     <a target="_blank" href="https://www.facebook.com/minipipo.kids/"><img src="../Assets/imagenes/rs_fb.png" alt="facebook/minipipo" /></a>
                 </div>
                 <div class="envios_text">
